<resources>
    <string name="app_name">Hooked</string>
    <string name="password_hint">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="messages">Messages</string>
    <string name="my_matches">My Matches</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="logout">Logout</string>
    <string name="error">Sorry something happened!</string>
    <string name="set">Click to set</string>
    <string name="browse">Browse</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="privacy">PRIVACY</string>
    <string name="gender_preference">Gender Preference</string>
    <string name="search_radius">Search Radius</string>
    <string name="my_current_location">My current location</string>
    <string name="upgrade_to_pro">Upgrade to PRO</string>
    <string name="you_re_on_our_free_plan">You\'re on our free plan</string>
    <string name="pro_version">pro version</string>
    <string name="you_want_to_make_the_most_out_of_hooked">You want to make the most out of Hooked?</string>
    <string name="general">GENERAL</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here</string>
    <string name="keep_browsing">Keep Browsing</string>
    <string name="send_a_message">Send a Message</string>
    <string name="sample">You and Ben like each other, you can now send him a message</string>
    <string name="it_s_a_match">It\'s a match!</string>
    <string name="your_age">Your age</string>
    <string name="choose_a_username">Choose a username</string>
    <string name="already_a_member">Already a member?</string>
    <string name="sign_up">Sign up</string>
    <string name="bg">background</string>
    <string name="favorite_button">favorite button</string>
    <string name="dislike">dislike</string>
    <string name="like_button">like button</string>
    <string name="block">Block</string>
    <string name="archive">Archive</string>
    <string name="hey_how_was_the_concert_last_night">Hey! how was the concert last night??</string>
    <string name="_09_50">09:50</string>
    <string name="john_tsoro">John Tsoro</string>
    <string name="status">status</string>
    <string name="navigation">navigation</string>
    <string name="silver">Silver</string>
    <string name="john_t_tsoro">John T Tsoro</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="no_favorites_found">No Favorites Found !</string>
</resources>
